--- a/index.html
+++ b/index.html
@@ -16,14 +16,51 @@
 
     <link rel="stylesheet" type="text/css" href="default.css"
 </head>
+
 <body>
     <section class="s1">
         <div class="main-container">
-            <h1>Hi, I'm Jaclyn Blinstrubas.</h1>
-            <p>This is a sentence.</p>
-            <a href="#">Link</a>
+            <div class="greeting-wrapper">
+                <h1>Hi, I'm Jaclyn Blinstrubas.</h1>
+            </div>
+
+
+            <div class="intro-wrapper">
+                <div class="nav-wrapper">
+                    <div class="dots-wrapper">
+                        <div id="dot-1" class="browser-dot"></div>
+                        <div id="dot-2" class="browser-dot"></div>
+                        <div id="dot-3" class="browser-dot"></div>
+                    </div>
+
+                    <ul id="navigation">
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="left-column">
+                    <img id="profile_pic" src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" />
+                    <h5 style="text-align: center; line-height: 0;"> Personalize Theme </h5>
+
+                    <div id="theme-options-wrapper">
+                        <div id="light-mode" class="theme-dot"></div>
+                        <div id="blue-mode" class="theme-dot"></div>
+                        <div id="green-mode" class="theme-dot"></div>
+                        <div id="purple-mode" class="theme-dot"></div>
+                    </div>
+
+                    <p id="settings-note">*Theme settings will be saved for <br> your next visit.</p>
+
+                </div>
+
+                <div class="right-column">
+                    right-column
+                </div>
+            </div>
         </div>
     </section>
+
+
 
     <section class="s2">
         <div class="main-container">
