--- a/index.html
+++ b/index.html
@@ -54,7 +54,17 @@
                 </div>
 
                 <div class="right-column">
-                    right-column
+
+                    <div id="preview-shadow">
+                        <div id="preview">
+                            <div id="corner-tl" class="corner"></div>
+                            <div id="corner-tr" class="corner"></div>
+                            <h3>What I Do</h3>
+                            <p>I am a creative-minded software developer with a results-driven mindset. </p>
+                            <div id="corner-br" class="corner"></div>
+                            <div id="corner-bl" class="corner"></div>
+                        </div>
+                </div>
                 </div>
             </div>
         </div>
